# pi-costume-spotter

./: .gitattributes  .gitignore  LICENSE  README.md
.claude/: launch.json
.github/workflows/: ci-cloud.yml  ci-edge.yml  ci-web.yml
cloud/ingest-service/: Dockerfile  README.md  build.gradle.kts  settings.gradle.kts
cloud/ingest-service/src/main/kotlin/com/costumespotter/ingest/: ApiModels.kt  Application.kt  Database.kt  Messages.kt  SightingRepository.kt
cloud/ingest-service/src/main/resources/: logback.xml
cloud/ingest-service/src/main/resources/db/migration/: V1__create_sightings.sql
cloud/ingest-service/src/test/kotlin/com/costumespotter/ingest/: IngestRouteTest.kt  MessagesTest.kt
cloud/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
docs/: architecture.md  setup-dev.md  setup-gcp.md  setup-pi.md
docs/decisions/: 001-hailo-vs-imx500.md  002-claude-vision.md  003-event-bus.md  004-sqlite-edge.md  005-tts-strategy.md  006-cloud-sql.md  007-mjpeg-vs-webrtc.md  008-hardware-abstraction.md  009-kotlin-ingest.md  README.md
docs/requirements/: 01-detection.md  02-tracking.md  03-identification.md  04-speech.md  05-storage.md  06-dashboard.md  07-cloud.md  README.md
edge/: .env.example  README.md  pyproject.toml
edge/costume_spotter/: __init__.py  __main__.py  config.py  imaging.py  main.py  pipeline.py
edge/costume_spotter/api/: __init__.py  app.py  mjpeg.py  routes.py  state.py  websocket.py
edge/costume_spotter/camera/: __init__.py  base.py  opencv_source.py  picamera2_source.py  synthetic.py
edge/costume_spotter/cloudsync/: __init__.py  pubsub_publisher.py
edge/costume_spotter/detection/: __init__.py  base.py  hailo.py  hog.py  mock.py
edge/costume_spotter/events/: __init__.py  bus.py  events.py
edge/costume_spotter/speech/: __init__.py  aplay.py  base.py  google_tts.py  null.py  piper.py  service.py  spooky.py
edge/costume_spotter/storage/: __init__.py  logger.py  models.py  repository.py  snapshots.py
edge/costume_spotter/tracking/: __init__.py  tracker.py
edge/costume_spotter/vision/: __init__.py  identifier.py  prompts.py
edge/deploy/: costume-spotter.service  ensure-camera.sh
edge/tests/: conftest.py  test_api.py  test_bus.py  test_config.py  test_events.py  test_hailo_letterbox.py  test_hailo_parsing.py  test_identifier.py  test_prompts.py  test_repository.py  test_snapshots.py  test_speech.py  test_spooky.py  test_tracker.py
edge/tests/contracts/: test_detector_contract.py
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/api/: client.ts  types.ts
web/src/components/: EventLog.tsx  LiveFeed.tsx  SightingsTable.tsx  Stats.tsx  StatusHeader.tsx
web/src/hooks/: useEventSocket.ts  useSightings.ts
